--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Job4Cse</string>
-    <string name="title_activity_job_banner">JobBanner</string>
+    <string name="title_activity_job_banner">Job4Cse</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Job4Cse</string>
